Bulletin card area sizing sorted. Still need to tackle menu & sidebar, may rewrite those with ul elements

--- a/index.html
+++ b/index.html
@@ -8,6 +8,172 @@
     <title>Your Cool New Dashboard</title>
 </head>
 <body>
-    A
+    <div class="dashboard-wrapper">
+        <div class="sidebar">
+            <div class="sidebar-header">
+                <div class="sidebar-logo">Sidebar Logo</div>
+                <div class="sidebar-title">Sidebar Title</div>
+            </div>
+            <div class="sidebar-navigation">
+                <div class="sidebar-navigation-item">
+                    <div class="navigation-item-icon">Nav Icon 1</div>
+                    <div class="navigation-item-name">Nav Item 1</div>
+                </div>
+                <div class="sidebar-navigation-item">
+                    <div class="navigation-item-icon">Nav Icon 2</div>
+                    <div class="navigation-item-name">Nav Item 2</div>
+                </div>
+                <div class="sidebar-navigation-item">
+                    <div class="navigation-item-icon">Nav Icon 3</div>
+                    <div class="navigation-item-name">Nav Item 3</div>
+                </div>
+                <div class="sidebar-navigation-item">
+                    <div class="navigation-item-icon">Nav Icon 4</div>
+                    <div class="navigation-item-name">Nav Item 4</div>
+                </div>
+                <div class="sidebar-navigation-item">
+                    <div class="navigation-item-icon">Nav Icon 5</div>
+                    <div class="navigation-item-name">Nav Item 5</div>
+                </div>
+                <div class="sidebar-navigation-item">
+                    <div class="navigation-item-icon">Nav Icon 6</div>
+                    <div class="navigation-item-name">Nav Item 6</div>
+                </div>
+            </div>
+            <div class="sidebar-links">
+                <div class="sidebar-link-item">
+                    <div class="sidebar-link-icon">Link Icon 1</div>
+                    <div class="sidebar-link-name">Link Item 1</div>
+                </div>
+                <div class="sidebar-link-item">
+                    <div class="sidebar-link-icon">Link Icon 2</div>
+                    <div class="sidebar-link-name">Link Item 2</div>
+                </div>
+                <div class="sidebar-link-item">
+                    <div class="sidebar-link-icon">Link Icon 3</div>
+                    <div class="sidebar-link-name">Link Item 3</div>
+                </div>
+            </div>
+        </div>
+        <div class="menu">
+            <div class="search-bar">
+                <div class="search-icon">Search Icon</div>
+                <div class="search-entry">Search Entry Field</div>
+            </div>
+            <div class="user">
+                <div class="user-profile-pic">User Profile Pic</div>
+                <div class="user-name">User Name</div>
+            </div>
+            <div class="notification-tray">
+                <div class="notification-bell">Bell Icon</div>
+                <div class="notification-user-pic">Profile Pic</div>
+                <div class="notification-user-name">User Name</div>
+            </div>
+            <div class="menu-links">
+                <div class="link-one">Menu Link One</div>
+                <div class="link-two">Menu Link Two</div>
+                <div class="link-three">Menu Link Three</div>
+            </div>
+        </div>
+        <div class="dashboard-card-wrapper">
+            <div class="project-cards">
+                <div class="project-card">
+                    <div class="card-side"></div>
+                    <div class="card-content">
+                        <div class="project-card-title">Project Card 1</div>
+                        <div class="card-text">Offline this discussion can you ballpark the cost per unit for me, for strategic high-level 30,000 ft view the horse is out of the barn. Problem territories gain alignment yet crisp ppt tiger team ping me. Sacred cow 360 degree content marketing pool so pig in a python my supervisor didn't like the latest revision you gave me can you switch back to the first revision? so draw a line in the sand circle back nor weaponize the data. We don't need to boil the ocean here copy and paste from stack overflow yet goalposts ultimate measure of success yet quarterly sales are at an all-time low.</div>
+                        <div class="card-icons">
+                            <div class="card-icon">Icon 1</div>
+                            <div class="card-icon">Icon 2</div>
+                            <div class="card-icon">Icon 3</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="card-side"></div>
+                    <div class="card-content">
+                        <div class="project-card-title">Project Card 2</div>
+                        <div class="card-text">Offline this discussion can you ballpark the cost per unit for me, for strategic high-level 30,000 ft view the horse is out of the barn. Problem territories gain alignment yet crisp ppt tiger team ping me. Sacred cow 360 degree content marketing pool so pig in a python my supervisor didn't like the latest revision you gave me can you switch back to the first revision? so draw a line in the sand circle back nor weaponize the data. We don't need to boil the ocean here copy and paste from stack overflow yet goalposts ultimate measure of success yet quarterly sales are at an all-time low.</div>
+                        <div class="card-icons">
+                            <div class="card-icon">Icon 1</div>
+                            <div class="card-icon">Icon 2</div>
+                            <div class="card-icon">Icon 3</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="card-side"></div>
+                    <div class="card-content">
+                        <div class="project-card-title">Project Card 3</div>
+                        <div class="card-text">Offline this discussion can you ballpark the cost per unit for me, for strategic high-level 30,000 ft view the horse is out of the barn. Problem territories gain alignment yet crisp ppt tiger team ping me. Sacred cow 360 degree content marketing pool so pig in a python my supervisor didn't like the latest revision you gave me can you switch back to the first revision? so draw a line in the sand circle back nor weaponize the data. We don't need to boil the ocean here copy and paste from stack overflow yet goalposts ultimate measure of success yet quarterly sales are at an all-time low.</div>
+                        <div class="card-icons">
+                            <div class="card-icon">Icon 1</div>
+                            <div class="card-icon">Icon 2</div>
+                            <div class="card-icon">Icon 3</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="card-side"></div>
+                    <div class="card-content">
+                        <div class="project-card-title">Project Card 4</div>
+                        <div class="card-text">Offline this discussion can you ballpark the cost per unit for me, for strategic high-level 30,000 ft view the horse is out of the barn. Problem territories gain alignment yet crisp ppt tiger team ping me. Sacred cow 360 degree content marketing pool so pig in a python my supervisor didn't like the latest revision you gave me can you switch back to the first revision? so draw a line in the sand circle back nor weaponize the data. We don't need to boil the ocean here copy and paste from stack overflow yet goalposts ultimate measure of success yet quarterly sales are at an all-time low.</div>
+                        <div class="card-icons">
+                            <div class="card-icon">Icon 1</div>
+                            <div class="card-icon">Icon 2</div>
+                            <div class="card-icon">Icon 3</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="card-side"></div>
+                    <div class="card-content">
+                        <div class="project-card-title">Project Card 5</div>
+                        <div class="card-text">Offline this discussion can you ballpark the cost per unit for me, for strategic high-level 30,000 ft view the horse is out of the barn. Problem territories gain alignment yet crisp ppt tiger team ping me. Sacred cow 360 degree content marketing pool so pig in a python my supervisor didn't like the latest revision you gave me can you switch back to the first revision? so draw a line in the sand circle back nor weaponize the data. We don't need to boil the ocean here copy and paste from stack overflow yet goalposts ultimate measure of success yet quarterly sales are at an all-time low.</div>
+                        <div class="card-icons">
+                            <div class="card-icon">Icon 1</div>
+                            <div class="card-icon">Icon 2</div>
+                            <div class="card-icon">Icon 3</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="card-side"></div>
+                    <div class="card-content">
+                        <div class="project-card-title">Project Card 6</div>
+                        <div class="card-text">Offline this discussion can you ballpark the cost per unit for me, for strategic high-level 30,000 ft view the horse is out of the barn. Problem territories gain alignment yet crisp ppt tiger team ping me. Sacred cow 360 degree content marketing pool so pig in a python my supervisor didn't like the latest revision you gave me can you switch back to the first revision? so draw a line in the sand circle back nor weaponize the data. We don't need to boil the ocean here copy and paste from stack overflow yet goalposts ultimate measure of success yet quarterly sales are at an all-time low.</div>
+                        <div class="card-icons">
+                            <div class="card-icon">Icon 1</div>
+                            <div class="card-icon">Icon 2</div>
+                            <div class="card-icon">Icon 3</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="bulletin-cards">
+                <div class="bulletin-card">
+                    <div class="bulletin-card-title">Announcements</div>
+                    <div class="announcement">Announcement 1</div>
+                    <div class="announcement">Announcement 2</div>
+                    <div class="announcement">Announcement 3</div>
+                </div>
+                <div class="bulletin-card">
+                    <div class="bulletin-card-title">Trending Users</div>
+                    <div class="trending-user">
+                        <div class="trending-user-photo">User Photo</div>
+                        <div class="trending-user-info">User Name<br>User Bio</div>
+                    </div>
+                    <div class="trending-user">
+                        <div class="trending-user-photo">User Photo</div>
+                        <div class="trending-user-info">User Name<br>User Bio</div>
+                    </div>
+                    <div class="trending-user">
+                        <div class="trending-user-photo">User Photo</div>
+                        <div class="trending-user-info">User Name<br>User Bio</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
