Okay, I've looked at this enough today.

--- a/index.html
+++ b/index.html
@@ -58,25 +58,26 @@
         <div class="menu">
             <div class="search-bar">
                 <div class="search-icon">Search Icon</div>
-                <div class="search-entry">Search Entry Field</div>
-            </div>
-            <div class="user">
-                <div class="user-profile-pic">User Profile Pic</div>
-                <div class="user-name">User Name</div>
+                <div class="search-entry"><input type="text"></input></div>
             </div>
             <div class="notification-tray">
                 <div class="notification-bell">Bell Icon</div>
-                <div class="notification-user-pic">Profile Pic</div>
-                <div class="notification-user-name">User Name</div>
+                <img class="notification-user-pic" src="./images/bbpp.png">
+                <div class="notification-user-name">Iroquois Pliskin</div>
+            </div>
+            <div class="user">
+                <img class="user-profile-pic" src="./images/bbpp.png">
+                <div class="user-name">Hi there,<br><span class="header-user-name">Iroquois Pliskin (@iamnotsolidsnake)</span></div>
             </div>
             <div class="menu-links">
-                <div class="link-one">Menu Link One</div>
-                <div class="link-two">Menu Link Two</div>
-                <div class="link-three">Menu Link Three</div>
+                <button class="link-button" type="button">New</button>
+                <button class="link-button" type="button">Upload</button>
+                <button class="link-button" type="button">Share</button>
             </div>
         </div>
         <div class="dashboard-card-wrapper">
             <div class="project-cards">
+                <div class="project-header">Your Projects</div>
                 <div class="project-card">
                     <div class="card-side"></div>
                     <div class="card-content">
@@ -160,19 +161,18 @@
                 <div class="bulletin-card">
                     <div class="bulletin-card-title">Trending Users</div>
                     <div class="trending-user">
-                        <div class="trending-user-photo">User Photo</div>
-                        <div class="trending-user-info">User Name<br>User Bio</div>
+                        <div class="trending-user-photo">Photo</div>
+                        <div class="trending-user-info"><span class = "card-user-name">bigboss</span><br>User Bio</div>
                     </div>
                     <div class="trending-user">
-                        <div class="trending-user-photo">User Photo</div>
-                        <div class="trending-user-info">User Name<br>User Bio</div>
+                        <div class="trending-user-photo">Photo</div>
+                        <div class="trending-user-info"><span class = "card-user-name">kazuhiramiller</span><br>User Bio</div>
                     </div>
                     <div class="trending-user">
-                        <div class="trending-user-photo">User Photo</div>
-                        <div class="trending-user-info">User Name<br>User Bio</div>
+                        <div class="trending-user-photo">Photo</div>
+                        <div class="trending-user-info"><span class = "card-user-name">halemmerich</span><br>User Bio</div>
                     </div>
                 </div>
-            </div>
         </div>
     </div>
 </body>
