First full build draft

--- a/index.html
+++ b/index.html
@@ -11,57 +11,57 @@
     <div class="dashboard-wrapper">
         <div class="sidebar">
             <div class="sidebar-header">
-                <div class="sidebar-logo">Sidebar Logo</div>
+                <div class="sidebar-logo"><img class="svg" src="./images/view-dashboard.svg"></svg></div>
                 <div class="sidebar-title">Sidebar Title</div>
             </div>
             <div class="sidebar-navigation">
                 <div class="sidebar-navigation-item">
-                    <div class="navigation-item-icon">Nav Icon 1</div>
-                    <div class="navigation-item-name">Nav Item 1</div>
+                    <div class="navigation-item-icon"><img class="svg" src="./images/home.svg"></div>
+                    <div class="navigation-item-name">Home</div>
                 </div>
                 <div class="sidebar-navigation-item">
-                    <div class="navigation-item-icon">Nav Icon 2</div>
-                    <div class="navigation-item-name">Nav Item 2</div>
+                    <div class="navigation-item-icon"><img class="svg" src="./images/card-account-mail-outline.svg"></div>
+                    <div class="navigation-item-name">Profile</div>
                 </div>
                 <div class="sidebar-navigation-item">
-                    <div class="navigation-item-icon">Nav Icon 3</div>
-                    <div class="navigation-item-name">Nav Item 3</div>
+                    <div class="navigation-item-icon"><img class="svg" src="./images/message-reply.svg"></div>
+                    <div class="navigation-item-name">Messages</div>
                 </div>
                 <div class="sidebar-navigation-item">
-                    <div class="navigation-item-icon">Nav Icon 4</div>
-                    <div class="navigation-item-name">Nav Item 4</div>
+                    <div class="navigation-item-icon"><img class="svg" src="./images/clock-time-three.svg"></div>
+                    <div class="navigation-item-name">History</div>
                 </div>
                 <div class="sidebar-navigation-item">
-                    <div class="navigation-item-icon">Nav Icon 5</div>
-                    <div class="navigation-item-name">Nav Item 5</div>
+                    <div class="navigation-item-icon"><img class="svg" src="./images/note-multiple.svg"></div>
+                    <div class="navigation-item-name">Tasks</div>
                 </div>
                 <div class="sidebar-navigation-item">
-                    <div class="navigation-item-icon">Nav Icon 6</div>
-                    <div class="navigation-item-name">Nav Item 6</div>
+                    <div class="navigation-item-icon"><img class="svg" src="./images/account-group.svg"></div>
+                    <div class="navigation-item-name">Communities</div>
                 </div>
             </div>
             <div class="sidebar-links">
                 <div class="sidebar-link-item">
-                    <div class="sidebar-link-icon">Link Icon 1</div>
-                    <div class="sidebar-link-name">Link Item 1</div>
+                    <div class="sidebar-link-icon"><img class="svg" src="./images/cog.svg"></div>
+                    <div class="sidebar-link-name">Settings</div>
                 </div>
                 <div class="sidebar-link-item">
-                    <div class="sidebar-link-icon">Link Icon 2</div>
-                    <div class="sidebar-link-name">Link Item 2</div>
+                    <div class="sidebar-link-icon"><img class="svg" src="./images/comment-question.svg"></div>
+                    <div class="sidebar-link-name">Support</div>
                 </div>
                 <div class="sidebar-link-item">
-                    <div class="sidebar-link-icon">Link Icon 3</div>
-                    <div class="sidebar-link-name">Link Item 3</div>
+                    <div class="sidebar-link-icon"><img class="svg" src="./images/shield-check.svg"></div>
+                    <div class="sidebar-link-name">Privacy</div>
                 </div>
             </div>
         </div>
         <div class="menu">
             <div class="search-bar">
-                <div class="search-icon">Search Icon</div>
+                <div class="search-icon"><img class="svg" src="./images/magnify.svg"></div>
                 <div class="search-entry"><input type="text"></input></div>
             </div>
             <div class="notification-tray">
-                <div class="notification-bell">Bell Icon</div>
+                <img class="svg bell" src="./images/bell-ring-outline.svg">
                 <img class="notification-user-pic" src="./images/bbpp.png">
                 <div class="notification-user-name">Iroquois Pliskin</div>
             </div>
@@ -84,9 +84,9 @@
                         <div class="project-card-title">Project Card 1</div>
                         <div class="card-text">Offline this discussion can you ballpark the cost per unit for me, for strategic high-level 30,000 ft view the horse is out of the barn. Problem territories gain alignment yet crisp ppt tiger team ping me. Sacred cow 360 degree content marketing pool so pig in a python my supervisor didn't like the latest revision you gave me can you switch back to the first revision? so draw a line in the sand circle back nor weaponize the data. We don't need to boil the ocean here copy and paste from stack overflow yet goalposts ultimate measure of success yet quarterly sales are at an all-time low.</div>
                         <div class="card-icons">
-                            <div class="card-icon">Icon 1</div>
-                            <div class="card-icon">Icon 2</div>
-                            <div class="card-icon">Icon 3</div>
+                            <div class="card-icon"><img class="svg" src="./images/star-plus-outline.svg"></div>
+                            <div class="card-icon"><img class="svg" src="./images/eye-plus-outline.svg"></div>
+                            <div class="card-icon"><img class="svg rotate" src="./images/merge.svg"></div>
                         </div>
                     </div>
                 </div>
@@ -96,9 +96,9 @@
                         <div class="project-card-title">Project Card 2</div>
                         <div class="card-text">Offline this discussion can you ballpark the cost per unit for me, for strategic high-level 30,000 ft view the horse is out of the barn. Problem territories gain alignment yet crisp ppt tiger team ping me. Sacred cow 360 degree content marketing pool so pig in a python my supervisor didn't like the latest revision you gave me can you switch back to the first revision? so draw a line in the sand circle back nor weaponize the data. We don't need to boil the ocean here copy and paste from stack overflow yet goalposts ultimate measure of success yet quarterly sales are at an all-time low.</div>
                         <div class="card-icons">
-                            <div class="card-icon">Icon 1</div>
-                            <div class="card-icon">Icon 2</div>
-                            <div class="card-icon">Icon 3</div>
+                            <div class="card-icon"><img class="svg" src="./images/star-plus-outline.svg"></div>
+                            <div class="card-icon"><img class="svg" src="./images/eye-plus-outline.svg"></div>
+                            <div class="card-icon"><img class="svg rotate" src="./images/merge.svg"></div>
                         </div>
                     </div>
                 </div>
@@ -108,9 +108,9 @@
                         <div class="project-card-title">Project Card 3</div>
                         <div class="card-text">Offline this discussion can you ballpark the cost per unit for me, for strategic high-level 30,000 ft view the horse is out of the barn. Problem territories gain alignment yet crisp ppt tiger team ping me. Sacred cow 360 degree content marketing pool so pig in a python my supervisor didn't like the latest revision you gave me can you switch back to the first revision? so draw a line in the sand circle back nor weaponize the data. We don't need to boil the ocean here copy and paste from stack overflow yet goalposts ultimate measure of success yet quarterly sales are at an all-time low.</div>
                         <div class="card-icons">
-                            <div class="card-icon">Icon 1</div>
-                            <div class="card-icon">Icon 2</div>
-                            <div class="card-icon">Icon 3</div>
+                            <div class="card-icon"><img class="svg" src="./images/star-plus-outline.svg"></div>
+                            <div class="card-icon"><img class="svg" src="./images/eye-plus-outline.svg"></div>
+                            <div class="card-icon"><img class="svg rotate" src="./images/merge.svg"></div>
                         </div>
                     </div>
                 </div>
@@ -120,9 +120,9 @@
                         <div class="project-card-title">Project Card 4</div>
                         <div class="card-text">Offline this discussion can you ballpark the cost per unit for me, for strategic high-level 30,000 ft view the horse is out of the barn. Problem territories gain alignment yet crisp ppt tiger team ping me. Sacred cow 360 degree content marketing pool so pig in a python my supervisor didn't like the latest revision you gave me can you switch back to the first revision? so draw a line in the sand circle back nor weaponize the data. We don't need to boil the ocean here copy and paste from stack overflow yet goalposts ultimate measure of success yet quarterly sales are at an all-time low.</div>
                         <div class="card-icons">
-                            <div class="card-icon">Icon 1</div>
-                            <div class="card-icon">Icon 2</div>
-                            <div class="card-icon">Icon 3</div>
+                            <div class="card-icon"><img class="svg" src="./images/star-plus-outline.svg"></div>
+                            <div class="card-icon"><img class="svg" src="./images/eye-plus-outline.svg"></div>
+                            <div class="card-icon"><img class="svg rotate" src="./images/merge.svg"></div>
                         </div>
                     </div>
                 </div>
@@ -132,9 +132,9 @@
                         <div class="project-card-title">Project Card 5</div>
                         <div class="card-text">Offline this discussion can you ballpark the cost per unit for me, for strategic high-level 30,000 ft view the horse is out of the barn. Problem territories gain alignment yet crisp ppt tiger team ping me. Sacred cow 360 degree content marketing pool so pig in a python my supervisor didn't like the latest revision you gave me can you switch back to the first revision? so draw a line in the sand circle back nor weaponize the data. We don't need to boil the ocean here copy and paste from stack overflow yet goalposts ultimate measure of success yet quarterly sales are at an all-time low.</div>
                         <div class="card-icons">
-                            <div class="card-icon">Icon 1</div>
-                            <div class="card-icon">Icon 2</div>
-                            <div class="card-icon">Icon 3</div>
+                            <div class="card-icon"><img class="svg" src="./images/star-plus-outline.svg"></div>
+                            <div class="card-icon"><img class="svg" src="./images/eye-plus-outline.svg"></div>
+                            <div class="card-icon"><img class="svg rotate" src="./images/merge.svg"></div>
                         </div>
                     </div>
                 </div>
@@ -144,33 +144,39 @@
                         <div class="project-card-title">Project Card 6</div>
                         <div class="card-text">Offline this discussion can you ballpark the cost per unit for me, for strategic high-level 30,000 ft view the horse is out of the barn. Problem territories gain alignment yet crisp ppt tiger team ping me. Sacred cow 360 degree content marketing pool so pig in a python my supervisor didn't like the latest revision you gave me can you switch back to the first revision? so draw a line in the sand circle back nor weaponize the data. We don't need to boil the ocean here copy and paste from stack overflow yet goalposts ultimate measure of success yet quarterly sales are at an all-time low.</div>
                         <div class="card-icons">
-                            <div class="card-icon">Icon 1</div>
-                            <div class="card-icon">Icon 2</div>
-                            <div class="card-icon">Icon 3</div>
+                            <div class="card-icon"><img class="svg" src="./images/star-plus-outline.svg"></div>
+                            <div class="card-icon"><img class="svg" src="./images/eye-plus-outline.svg"></div>
+                            <div class="card-icon"><img class="svg rotate" src="./images/merge.svg"></div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="bulletin-cards">
-                <div class="bulletin-card">
+                <div class="bulletin-card announcements">
                     <div class="bulletin-card-title">Announcements</div>
-                    <div class="announcement">Announcement 1</div>
-                    <div class="announcement">Announcement 2</div>
-                    <div class="announcement">Announcement 3</div>
+                    <div class="line"></div>
+                    <div class="announcement"><p>Big Boss declares December 28th as "Peace Day" to commemorate a split second of total global denuclearization.</p></div>
+                    <div class="line"></div>
+                    <div class="announcement"><p>Hal Emmerich's newest field reconnaisance robot is capable of active camoflauge. He promises not to be a creep about it, but maybe do a bug sweep for ensured privacy.</p></div>
+                    <div class="line"></div>
+                    <div class="announcement"><p>For lunch, Kazuhira Miller will be serving his legendary burgers in Mother Base's main mess hall.</p></div>
                 </div>
-                <div class="bulletin-card">
+                <div class="bulletin-card trending-users">
                     <div class="bulletin-card-title">Trending Users</div>
+                    <div class="line"></div>
                     <div class="trending-user">
-                        <div class="trending-user-photo">Photo</div>
-                        <div class="trending-user-info"><span class = "card-user-name">bigboss</span><br>User Bio</div>
+                        <img class="trending-user-photo" src="./images/bbpp.png">
+                        <div class="trending-user-info"><span class = "card-user-name">@bigboss</span><br><p>Kept your site deployment waiting, huh?</p></div>
                     </div>
+                    <div class="line"></div>
                     <div class="trending-user">
-                        <div class="trending-user-photo">Photo</div>
-                        <div class="trending-user-info"><span class = "card-user-name">kazuhiramiller</span><br>User Bio</div>
+                        <img class="trending-user-photo" src="./images/halpp.png">
+                        <div class="trending-user-info"><span class = "card-user-name">@kazuhiramiller</span><br><p>Nine years, nine years I've waited for this product launch.</p></div>
                     </div>
+                    <div class="line"></div>
                     <div class="trending-user">
-                        <div class="trending-user-photo">Photo</div>
-                        <div class="trending-user-info"><span class = "card-user-name">halemmerich</span><br>User Bio</div>
+                        <img class="trending-user-photo" src="./images/millerpp.jpg">
+                        <div class="trending-user-info"><span class = "card-user-name">@halemmerich</span><br>Wondering if love can blossom, even on the battlefield...</div>
                     </div>
                 </div>
         </div>
