prepping for move to new mac

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="sidebar">
             <div class="sidebar-header">
                 <div class="sidebar-logo"><img class="svg" src="./images/view-dashboard.svg"></svg></div>
-                <div class="sidebar-title">Sidebar Title</div>
+                <div class="sidebar-title">Mother Basecamp</div>
             </div>
             <div class="sidebar-navigation">
                 <div class="sidebar-navigation-item">
